# coolbird-tagify

./: .gitignore  Makefile  README.md  build.config
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-test.yml  release.yml
.trae/rules/: project_rules.md
.vercel/: project.json
cb_file_manager/: .cbfile_config.json  CLAUDE.md  README.md  logo.psd  pubspec.yaml
cb_file_manager/#tags/: desktop.ini
cb_file_manager/.github/workflows/: test.yml
cb_file_manager/android/: build.gradle
cb_file_manager/android/app/: build.gradle
cb_file_manager/ios/Runner/: Info.plist
cb_file_manager/ios/Runner.xcodeproj/: project.pbxproj
cb_file_manager/lib/: main.dart  objectbox-model.json  objectbox.dart  objectbox.g.dart
cb_file_manager/lib/config/: app_theme.dart  language_controller.dart  theme_config.dart  theme_factory.dart
cb_file_manager/lib/core/: service_locator.dart
cb_file_manager/lib/helpers/: README.md  app_path_helper.dart  batch_tag_manager.dart  external_app_helper.dart  fc_native_video_thumbnail.dart  ffmpeg_extensions.dart  file_icon_helper.dart  file_type_helper.dart  filesystem_utils.dart  folder_sort_manager.dart  folder_thumbnail_service.dart  frame_timing_optimizer.dart  io_extensions.dart  media_kit_audio_helper.dart  native_vlc_direct_helper.dart  network_file_cache_service.dart  network_thumbnail_helper.dart  path_utils.dart  smb_native_thumbnail_helper.dart  streaming_helper.dart  tag_color_manager.dart  tag_manager.dart  thumbnail_background_isolate.dart  thumbnail_helper.dart  thumbnail_isolate_manager.dart  thumbnail_queue_manager.dart  trash_manager.dart  ui_blocking_prevention.dart  user_preferences.dart  video_thumbnail_helper.dart  vlc_direct_smb_helper.dart  win32_smb_helper.dart  windows_app_icon.dart
cb_file_manager/lib/pages/: instant_album_demo.dart
cb_file_manager/lib/providers/: theme_provider.dart
cb_file_manager/lib/services/: album_auto_rule_service.dart  (+11 more)
cb_file_manager/linux/: CMakeLists.txt
cb_file_manager/test/: delete_focus_next_item_test.dart  mobile_drives_action_bar_test.dart  navigation_test.dart  path_autocomplete_text_field_test.dart  recent_paths_test.dart  selection_restore_order_test.dart  widget_test.dart
cb_file_manager/web/: .cbfile_config.json  index.html  manifest.json
cb_file_manager/windows/: .gitignore  CMakeLists.txt
cb_file_manager/windows/smb_native/: CMakeLists.txt  smb_native.cpp  smb_native.h
docs/: ai-technical-guide.md  coding-standards.md  contribution-guide.md  index.md  project-brief.md  testing-strategy.md  troubleshooting.md
docs/coding-rules/: i18n-internationalization-guide.md  theme-styling-guide.md
docs/features/: 01-file-browser-grid-preview.md  02-keyboard-shortcuts.md  03-sidebar-pinning-and-workspace.md  04-split-pane-view.md
docs/technical/: 01-ai-overview.md  02-execution-flow.md  03-navigation-state.md  04-layers.md  05-data-persistence.md  06-filesystem-media.md  07-ui-theming-localization.md  08-logging-testing-platform.md  09-gotchas-extension.md  index.md
docs/troubleshooting/: android-smb-vlc-no-render.md
docs/ui-patterns/: file-folder-listing.md  operation-progress.md  skeleton-loading.md
installer/windows/: installer.iss  installer.wxs
mobile_smb_native/.dart_tool/: package_config.json  package_graph.json
mobile_smb_native/example/: .flutter-plugins-dependencies  pubspec.yaml
mobile_smb_native/native/: CMakeLists.txt
mobile_smb_native/native/src/: smb_bridge.cpp  stub_implementations.cpp
mobile_smb_native/test/: smb_version_test.dart
mobile_smb_native/windows/: CMakeLists.txt
scripts/: build.sh
(+347 files in other folders)
